# AirplaneGame

./: .gitignore  README.md  create_assets.py  milestones.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.bat  setup.py
docs/: SETUP.md
src/: __init__.py  __main__.py  airport_renderer.py  asset_manager.py  audio_manager.py  config.py  data_models.py  game_logic.py  i18n.py  i18n.py.bak  install_dependencies.py  loading_screen.py  main.py  menu_screen.py  requirements.txt  settings.py  ui_manager.py
src/core/: __init__.py  assets.py  game_logic.py  renderer.py
src/entities/: __init__.py  aircraft.py  airport.py  flight.py  player.py
src/widgets/: __init__.py  control_panel.py  dashboard.py  status_panel.py
tests/: test_asset_manager.py  test_entities.py
