[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airportgame"
version = "0.1.0"
description = "2D Airplane Idle Game - Airport Management Simulator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Rufus Pregler"}, {name = "Hannes Heyer"}]

[project.urls]
Repository = "https://github.com/AirplaneGameRH/AirplaneGame"
Issues = "https://github.com/AirplaneGame/AirplaneGame/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.1",
    "flake8>=6.0",
    "mypy>=1.9",
    "isort>=5.12",
    "pre-commit>=3.4",
]

[project.scripts]
airportgame = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
